@@ -243,7 +243,13 @@ class ContactServiceImpl implements ContactService {
                 .toList();
 
         if (agentIds.isEmpty()) {
-            return Map.of();
+            // UWAGA: Collections.emptyMap() (a nie Map.of()) – wynikowa mapa jest odpytywana
+            // przez agentNames.get(c.getAgentId()) w listContacts()/getCustomerHistory(), gdzie
+            // c.getAgentId() jest typowo null (kontakty w kolejce/bez przypisania). Map.of()
+            // zwraca niemutowalną mapę, której get() rzuca NPE dla klucza null
+            // (java.util.ImmutableCollections.MapN#get wywołuje Objects.requireNonNull).
+            // Collections.emptyMap() (backed by HashMap semantics) po prostu zwraca null.
+            return Collections.emptyMap();
         }
 
         Map<UUID, String> result = new HashMap<>();
@@ -1491,6 +1497,25 @@ class ContactServiceImpl implements ContactService {
     @Transactional
     public void saveAiSummary(ContactAiSummary aiSummary) {
         contactAiSummaryRepository.save(aiSummary);
+    }
+
+    // =========================================================================
+    // BE-113: Retencja – usuwanie batchowane (EPIC-29)
+    // =========================================================================
+
+    @Override
+    public List<UUID> purgeContactsOlderThan(UUID tenantId, Instant cutoff, int batchSize) {
+        return contactRepository.deleteBatchOlderThan(tenantId, cutoff, batchSize);
+    }
+
+    @Override
+    public int purgeTranscriptionsOlderThan(UUID tenantId, Instant cutoff, int batchSize) {
+        return contactTranscriptionRepository.deleteBatchOlderThan(tenantId, cutoff, batchSize);
+    }
+
+    @Override
+    public int purgeAiSummariesOlderThan(UUID tenantId, Instant cutoff, int batchSize) {
+        return contactAiSummaryRepository.deleteBatchOlderThan(tenantId, cutoff, batchSize);
     }
 
     // =========================================================================
